several bugs fixed / started RecaptchaService.java TEST CLASS