@@ -8,19 +8,20 @@ import com.example.KinetoWebsite.Model.Mapper.ServiceDetailsMapper;
 import com.example.KinetoWebsite.Repository.ServiceDetailsRepository;
 import com.example.KinetoWebsite.Service.ServiceDetailsServiceImpl;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -35,326 +36,229 @@ class ServiceDetailsServiceTest {
     @InjectMocks
     private ServiceDetailsServiceImpl serviceDetailsService;
 
-    private ServiceDetailsDTO serviceDetailsDTO;
-    private ServiceDetails serviceDetailsEntity;
-    private ServiceDetails savedServiceDetailsEntity;
-    private ServiceDetailsDTO savedServiceDetailsDTO;
+    private ServiceDetailsDTO sampleDTO;
+    private ServiceDetails sampleEntity;
 
     @BeforeEach
     void setUp() {
-        // Setup test data
-        serviceDetailsDTO = new ServiceDetailsDTO();
-        serviceDetailsDTO.setNumeServiciu("Masaj");
-        serviceDetailsDTO.setDescriereServiciu("Masaj relaxant");
-        serviceDetailsDTO.setPretServiciu(100);
-        serviceDetailsDTO.setDurataServiciu(60);
-        serviceDetailsDTO.setContact("0722 123 456");
+        // Initialize fresh data before each test to avoid side effects
+        sampleDTO = new ServiceDetailsDTO();
+        sampleDTO.setNumeServiciu("Kinetotherapy");
+        sampleDTO.setDescriereServiciu("Recovery description");
+        sampleDTO.setPretServiciu(150);
+        sampleDTO.setDurataServiciu(50);
+        sampleDTO.setContact("0700123456");
 
-        serviceDetailsEntity = new ServiceDetails();
-        serviceDetailsEntity.setNumeServiciu("Masaj");
-        serviceDetailsEntity.setDescriereServiciu("Masaj relaxant");
-        serviceDetailsEntity.setPretServiciu(100);
-        serviceDetailsEntity.setDurataServiciu(60);
-        serviceDetailsEntity.setContact("0722 123 456");
-
-        savedServiceDetailsEntity = new ServiceDetails();
-        savedServiceDetailsEntity.setId(1L);
-        savedServiceDetailsEntity.setNumeServiciu("Masaj");
-        savedServiceDetailsEntity.setDescriereServiciu("Masaj relaxant");
-        savedServiceDetailsEntity.setPretServiciu(100);
-        savedServiceDetailsEntity.setDurataServiciu(60);
-        savedServiceDetailsEntity.setContact("0722 123 456");
-
-        savedServiceDetailsDTO = new ServiceDetailsDTO();
-        savedServiceDetailsDTO.setNumeServiciu("Masaj");
-        savedServiceDetailsDTO.setDescriereServiciu("Masaj relaxant");
-        savedServiceDetailsDTO.setPretServiciu(100);
-        savedServiceDetailsDTO.setDurataServiciu(60);
-        savedServiceDetailsDTO.setContact("0722 123 456");
+        sampleEntity = new ServiceDetails();
+        sampleEntity.setId(1L);
+        sampleEntity.setNumeServiciu("Kinetotherapy");
+        sampleEntity.setDescriereServiciu("Recovery description");
+        sampleEntity.setPretServiciu(150);
+        sampleEntity.setDurataServiciu(50);
+        sampleEntity.setContact("0700123456");
     }
 
-    // GET Methods Tests
+    // --- GET Methods ---
 
     @Test
-    void getAllServices_ShouldReturnListOfDTOs() {
+    @DisplayName("Should return list of DTOs when services exist")
+    void getAllServices_WhenServicesExist_ReturnsDtoList() {
         // Arrange
-        ServiceDetails entity1 = new ServiceDetails();
-        entity1.setId(1L);
-        ServiceDetails entity2 = new ServiceDetails();
-        entity2.setId(2L);
-
-        List<ServiceDetails> entities = Arrays.asList(entity1, entity2);
-        List<ServiceDetailsDTO> expectedDTOs = Arrays.asList(
-                new ServiceDetailsDTO(), new ServiceDetailsDTO()
-        );
-
-        when(serviceDetailsRepo.findAll()).thenReturn(entities);
-        when(serviceDetailsMapper.toDTO(entity1)).thenReturn(expectedDTOs.get(0));
-        when(serviceDetailsMapper.toDTO(entity2)).thenReturn(expectedDTOs.get(1));
+        when(serviceDetailsRepo.findAll()).thenReturn(List.of(sampleEntity));
+        when(serviceDetailsMapper.toDTO(sampleEntity)).thenReturn(sampleDTO);
 
         // Act
         List<ServiceDetailsDTO> result = serviceDetailsService.getAllServices();
 
         // Assert
-        assertNotNull(result);
-        assertEquals(2, result.size());
-        assertEquals(expectedDTOs, result);
-
-        verify(serviceDetailsRepo, times(1)).findAll();
-        verify(serviceDetailsMapper, times(2)).toDTO(any(ServiceDetails.class));
+        assertFalse(result.isEmpty());
+        assertEquals(1, result.size());
+        assertEquals(sampleDTO.getNumeServiciu(), result.get(0).getNumeServiciu());
+        verify(serviceDetailsRepo).findAll();
     }
 
     @Test
-    void getAllServices_WhenNoServices_ShouldReturnEmptyList() {
+    @DisplayName("Should return empty list when no services exist")
+    void getAllServices_WhenNoServices_ReturnsEmptyList() {
         // Arrange
-        when(serviceDetailsRepo.findAll()).thenReturn(List.of());
+        when(serviceDetailsRepo.findAll()).thenReturn(Collections.emptyList());
 
         // Act
         List<ServiceDetailsDTO> result = serviceDetailsService.getAllServices();
 
         // Assert
-        assertNotNull(result);
         assertTrue(result.isEmpty());
-        verify(serviceDetailsRepo, times(1)).findAll();
-        verify(serviceDetailsMapper, never()).toDTO(any(ServiceDetails.class));
+        verify(serviceDetailsMapper, never()).toDTO(any());
     }
 
     @Test
-    void getServiceByName_WhenServiceExists_ShouldReturnDTO() {
+    @DisplayName("Should return ServiceDTO when searching by valid name")
+    void getServiceByName_WhenExists_ReturnsOptionalDto() {
         // Arrange
-        String serviceName = "Masaj";
-        when(serviceDetailsRepo.findByNumeServiciu(serviceName))
-                .thenReturn(Optional.of(serviceDetailsEntity));
-        when(serviceDetailsMapper.toDTO(serviceDetailsEntity)).thenReturn(serviceDetailsDTO);
+        String name = "Kinetotherapy";
+        when(serviceDetailsRepo.findByNumeServiciu(name)).thenReturn(Optional.of(sampleEntity));
+        when(serviceDetailsMapper.toDTO(sampleEntity)).thenReturn(sampleDTO);
 
         // Act
-        Optional<ServiceDetailsDTO> result = serviceDetailsService.getServiceByName(serviceName);
+        Optional<ServiceDetailsDTO> result = serviceDetailsService.getServiceByName(name);
 
         // Assert
         assertTrue(result.isPresent());
-        assertEquals(serviceDetailsDTO, result.get());
-
-        verify(serviceDetailsRepo, times(1)).findByNumeServiciu(serviceName);
-        verify(serviceDetailsMapper, times(1)).toDTO(serviceDetailsEntity);
+        assertEquals(sampleDTO, result.get());
     }
 
     @Test
-    void getServiceByName_WhenServiceNotExists_ShouldReturnEmpty() {
+    @DisplayName("Should return filtered list when searching by price")
+    void getServiceByPrice_ReturnsDtoList() {
         // Arrange
-        String serviceName = "NonExistent";
-        when(serviceDetailsRepo.findByNumeServiciu(serviceName)).thenReturn(Optional.empty());
-
-        // Act
-        Optional<ServiceDetailsDTO> result = serviceDetailsService.getServiceByName(serviceName);
-
-        // Assert
-        assertTrue(result.isEmpty());
-        verify(serviceDetailsRepo, times(1)).findByNumeServiciu(serviceName);
-        verify(serviceDetailsMapper, never()).toDTO(any(ServiceDetails.class));
-    }
-
-    @Test
-    void getServiceByPrice_ShouldReturnFilteredDTOs() {
-        // Arrange
-        Integer price = 100;
-        ServiceDetails entity1 = new ServiceDetails();
-        ServiceDetails entity2 = new ServiceDetails();
-        List<ServiceDetails> entities = Arrays.asList(entity1, entity2);
-        List<ServiceDetailsDTO> expectedDTOs = Arrays.asList(
-                new ServiceDetailsDTO(), new ServiceDetailsDTO()
-        );
-
-        when(serviceDetailsRepo.findByPretServiciu(price)).thenReturn(entities);
-        when(serviceDetailsMapper.toDTO(entity1)).thenReturn(expectedDTOs.get(0));
-        when(serviceDetailsMapper.toDTO(entity2)).thenReturn(expectedDTOs.get(1));
+        int price = 150;
+        when(serviceDetailsRepo.findByPretServiciu(price)).thenReturn(List.of(sampleEntity));
+        when(serviceDetailsMapper.toDTO(sampleEntity)).thenReturn(sampleDTO);
 
         // Act
         List<ServiceDetailsDTO> result = serviceDetailsService.getServiceByPrice(price);
 
         // Assert
-        assertNotNull(result);
-        assertEquals(2, result.size());
-        assertEquals(expectedDTOs, result);
-
-        verify(serviceDetailsRepo, times(1)).findByPretServiciu(price);
-        verify(serviceDetailsMapper, times(2)).toDTO(any(ServiceDetails.class));
+        assertEquals(1, result.size());
+        assertEquals(price, result.get(0).getPretServiciu());
     }
 
     @Test
-    void getServiceByDuration_ShouldReturnFilteredDTOs() {
+    @DisplayName("Should return filtered list when searching by duration")
+    void getServiceByDuration_ReturnsDtoList() {
         // Arrange
-        Integer duration = 60;
-        ServiceDetails entity1 = new ServiceDetails();
-        List<ServiceDetails> entities = Arrays.asList(entity1);
-        List<ServiceDetailsDTO> expectedDTOs = Arrays.asList(new ServiceDetailsDTO());
-
-        when(serviceDetailsRepo.findByDurataServiciu(duration)).thenReturn(entities);
-        when(serviceDetailsMapper.toDTO(entity1)).thenReturn(expectedDTOs.get(0));
+        int duration = 50;
+        when(serviceDetailsRepo.findByDurataServiciu(duration)).thenReturn(List.of(sampleEntity));
+        when(serviceDetailsMapper.toDTO(sampleEntity)).thenReturn(sampleDTO);
 
         // Act
         List<ServiceDetailsDTO> result = serviceDetailsService.getServiceByDuration(duration);
 
         // Assert
-        assertNotNull(result);
         assertEquals(1, result.size());
-        assertEquals(expectedDTOs, result);
-
-        verify(serviceDetailsRepo, times(1)).findByDurataServiciu(duration);
-        verify(serviceDetailsMapper, times(1)).toDTO(entity1);
+        assertEquals(duration, result.get(0).getDurataServiciu());
     }
 
-    // CREATE Method Tests
+    // --- CREATE Method ---
 
     @Test
-    void createService_WithValidData_ShouldReturnSavedDTO() {
+    @DisplayName("Should save and return DTO when creating new unique service")
+    void createService_HappyPath_ReturnsDto() {
         // Arrange
-        when(serviceDetailsRepo.findByNumeServiciu(serviceDetailsDTO.getNumeServiciu()))
-                .thenReturn(Optional.empty());
-        when(serviceDetailsMapper.toEntity(serviceDetailsDTO)).thenReturn(serviceDetailsEntity);
-        when(serviceDetailsRepo.save(serviceDetailsEntity)).thenReturn(savedServiceDetailsEntity);
-        when(serviceDetailsMapper.toDTO(savedServiceDetailsEntity)).thenReturn(savedServiceDetailsDTO);
+        when(serviceDetailsRepo.findByNumeServiciu(sampleDTO.getNumeServiciu())).thenReturn(Optional.empty());
+        when(serviceDetailsMapper.toEntity(sampleDTO)).thenReturn(sampleEntity);
+        when(serviceDetailsRepo.save(sampleEntity)).thenReturn(sampleEntity);
+        when(serviceDetailsMapper.toDTO(sampleEntity)).thenReturn(sampleDTO);
 
         // Act
-        ServiceDetailsDTO result = serviceDetailsService.createService(serviceDetailsDTO);
+        ServiceDetailsDTO result = serviceDetailsService.createService(sampleDTO);
 
         // Assert
         assertNotNull(result);
-        assertEquals(savedServiceDetailsDTO, result);
+        assertEquals(sampleDTO.getNumeServiciu(), result.getNumeServiciu());
 
-        verify(serviceDetailsRepo, times(1)).findByNumeServiciu("Masaj");
-        verify(serviceDetailsMapper, times(1)).toEntity(serviceDetailsDTO);
-        verify(serviceDetailsRepo, times(1)).save(serviceDetailsEntity);
-        verify(serviceDetailsMapper, times(1)).toDTO(savedServiceDetailsEntity);
+        // Verify the save was called
+        verify(serviceDetailsRepo).save(sampleEntity);
     }
 
     @Test
-    void createService_WithNullInput_ShouldThrowException() {
+    @DisplayName("Should throw IllegalArgumentException when input DTO is null")
+    void createService_NullInput_ThrowsException() {
         // Act & Assert
-        IllegalArgumentException exception = assertThrows(IllegalArgumentException.class, () -> {
-            serviceDetailsService.createService(null);
-        });
+        IllegalArgumentException exception = assertThrows(IllegalArgumentException.class,
+                () -> serviceDetailsService.createService(null));
 
         assertEquals("Service details cannot be null.", exception.getMessage());
-
-        verify(serviceDetailsRepo, never()).findByNumeServiciu(anyString());
-        verify(serviceDetailsRepo, never()).save(any(ServiceDetails.class));
+        verify(serviceDetailsRepo, never()).save(any());
     }
 
     @Test
-    void createService_WithDuplicateName_ShouldThrowException() {
+    @DisplayName("Should throw DuplicateResourceException when service name exists")
+    void createService_DuplicateName_ThrowsException() {
         // Arrange
-        when(serviceDetailsRepo.findByNumeServiciu(serviceDetailsDTO.getNumeServiciu()))
-                .thenReturn(Optional.of(serviceDetailsEntity));
+        when(serviceDetailsRepo.findByNumeServiciu(sampleDTO.getNumeServiciu()))
+                .thenReturn(Optional.of(sampleEntity));
 
         // Act & Assert
-        DuplicateResourceException exception = assertThrows(DuplicateResourceException.class, () -> {
-            serviceDetailsService.createService(serviceDetailsDTO);
-        });
+        DuplicateResourceException exception = assertThrows(DuplicateResourceException.class,
+                () -> serviceDetailsService.createService(sampleDTO));
 
         assertEquals("Service already exists.", exception.getMessage());
-
-        verify(serviceDetailsRepo, times(1)).findByNumeServiciu("Masaj");
-        verify(serviceDetailsMapper, never()).toEntity(any(ServiceDetailsDTO.class));
-        verify(serviceDetailsRepo, never()).save(any(ServiceDetails.class));
+        // Verify we never attempted to convert or save
+        verify(serviceDetailsMapper, never()).toEntity(any());
+        verify(serviceDetailsRepo, never()).save(any());
     }
 
-    // UPDATE Method Tests
+    // --- UPDATE Method ---
 
     @Test
-    void updateService_WithValidData_ShouldReturnUpdatedDTO() {
+    @DisplayName("Should update fields and save when ID exists")
+    void updateService_ValidId_UpdatesAndReturnsDto() {
         // Arrange
-        Long serviceId = 1L;
-        ServiceDetailsDTO updateDTO = new ServiceDetailsDTO();
-        updateDTO.setNumeServiciu("Masaj Updated");
-        updateDTO.setDescriereServiciu("Descriere updated");
-        updateDTO.setPretServiciu(150);
-        updateDTO.setDurataServiciu(90);
-        updateDTO.setContact("0722 999 999");
+        Long id = 1L;
+        ServiceDetailsDTO updateInfo = new ServiceDetailsDTO();
+        updateInfo.setNumeServiciu("New Name");
+        updateInfo.setPretServiciu(999);
+        // Assuming other fields are null or generic in the update DTO
 
-        ServiceDetails updatedEntity = new ServiceDetails();
-        updatedEntity.setId(serviceId);
-        updatedEntity.setNumeServiciu("Masaj Updated");
+        // The entity found in DB
+        ServiceDetails existingEntity = new ServiceDetails();
+        existingEntity.setId(id);
+        existingEntity.setNumeServiciu("Old Name");
+        existingEntity.setPretServiciu(100);
 
-        ServiceDetailsDTO expectedDTO = new ServiceDetailsDTO();
-        expectedDTO.setNumeServiciu("Masaj Updated");
+        when(serviceDetailsRepo.findById(id)).thenReturn(Optional.of(existingEntity));
 
-        when(serviceDetailsRepo.findById(serviceId)).thenReturn(Optional.of(serviceDetailsEntity));
-        when(serviceDetailsRepo.save(serviceDetailsEntity)).thenReturn(updatedEntity);
-        when(serviceDetailsMapper.toDTO(updatedEntity)).thenReturn(expectedDTO);
+        // We mock the save to return whatever is passed to it (or the modified entity)
+        when(serviceDetailsRepo.save(any(ServiceDetails.class))).thenAnswer(invocation -> invocation.getArgument(0));
+
+        // Mock mapper response
+        ServiceDetailsDTO expectedResponse = new ServiceDetailsDTO();
+        expectedResponse.setNumeServiciu("New Name");
+        when(serviceDetailsMapper.toDTO(any(ServiceDetails.class))).thenReturn(expectedResponse);
 
         // Act
-        ServiceDetailsDTO result = serviceDetailsService.updateService(serviceId, updateDTO);
+        ServiceDetailsDTO result = serviceDetailsService.updateService(id, updateInfo);
 
         // Assert
         assertNotNull(result);
-        assertEquals(expectedDTO, result);
-        assertEquals("Masaj Updated", serviceDetailsEntity.getNumeServiciu());
-        assertEquals("Descriere updated", serviceDetailsEntity.getDescriereServiciu());
-        assertEquals(150, serviceDetailsEntity.getPretServiciu());
-        assertEquals(90, serviceDetailsEntity.getDurataServiciu());
-        assertEquals("0722 999 999", serviceDetailsEntity.getContact());
 
-        verify(serviceDetailsRepo, times(1)).findById(serviceId);
-        verify(serviceDetailsRepo, times(1)).save(serviceDetailsEntity);
-        verify(serviceDetailsMapper, times(1)).toDTO(updatedEntity);
+        // Captor: Verify the entity passed to save() actually has the NEW values
+        ArgumentCaptor<ServiceDetails> captor = ArgumentCaptor.forClass(ServiceDetails.class);
+        verify(serviceDetailsRepo).save(captor.capture());
+
+        ServiceDetails capturedEntity = captor.getValue();
+        assertEquals("New Name", capturedEntity.getNumeServiciu(), "Name should be updated before saving");
+        assertEquals(999, capturedEntity.getPretServiciu(), "Price should be updated before saving");
     }
 
     @Test
-    void updateService_WithNonExistingId_ShouldThrowException() {
+    @DisplayName("Should throw IllegalArgumentException when updating non-existent ID")
+    void updateService_InvalidId_ThrowsException() {
         // Arrange
-        Long nonExistingId = 999L;
-        when(serviceDetailsRepo.findById(nonExistingId)).thenReturn(Optional.empty());
+        Long invalidId = 99L;
+        when(serviceDetailsRepo.findById(invalidId)).thenReturn(Optional.empty());
 
         // Act & Assert
-        IllegalArgumentException exception = assertThrows(IllegalArgumentException.class, () -> {
-            serviceDetailsService.updateService(nonExistingId, serviceDetailsDTO);
-        });
+        IllegalArgumentException exception = assertThrows(IllegalArgumentException.class,
+                () -> serviceDetailsService.updateService(invalidId, sampleDTO));
 
-        assertEquals("Service not found with id: " + nonExistingId, exception.getMessage());
-
-        verify(serviceDetailsRepo, times(1)).findById(nonExistingId);
-        verify(serviceDetailsRepo, never()).save(any(ServiceDetails.class));
+        assertTrue(exception.getMessage().contains("Service not found with id: " + invalidId));
+        verify(serviceDetailsRepo, never()).save(any());
     }
 
-    // DELETE Method Tests
+    // --- DELETE Method ---
 
     @Test
-    void deleteService_WithValidId_ShouldCallRepository() {
+    @DisplayName("Should call deleteById on repository")
+    void deleteService_CallsRepository() {
         // Arrange
-        Long serviceId = 1L;
-        doNothing().when(serviceDetailsRepo).deleteById(serviceId);
+        Long id = 1L;
 
         // Act
-        serviceDetailsService.deleteService(serviceId);
+        serviceDetailsService.deleteService(id);
 
         // Assert
-        verify(serviceDetailsRepo, times(1)).deleteById(serviceId);
-    }
-
-    @Test
-    void deleteService_WithNonExistingId_ShouldStillCallRepository() {
-        // Arrange
-        Long nonExistingId = 999L;
-        doNothing().when(serviceDetailsRepo).deleteById(nonExistingId);
-
-        // Act
-        serviceDetailsService.deleteService(nonExistingId);
-
-        // Assert
-        verify(serviceDetailsRepo, times(1)).deleteById(nonExistingId);
-    }
-
-    // Constructor Test
-
-    @Test
-    void constructor_ShouldInitializeDependencies() {
-        // This test verifies that constructor properly initializes dependencies
-        ServiceDetailsRepository repo = mock(ServiceDetailsRepository.class);
-        ServiceDetailsMapper mapper = mock(ServiceDetailsMapper.class);
-
-        ServiceDetailsServiceImpl service = new ServiceDetailsServiceImpl(repo, mapper);
-
-        assertNotNull(service);
+        verify(serviceDetailsRepo, times(1)).deleteById(id);
     }
 }
-
